Fix whitespace on right

--- a/src/assets/styles/Main.scss
+++ b/src/assets/styles/Main.scss
@@ -7,8 +7,8 @@
     gap: 30px;
     justify-content: flex-start;
     align-items: center;
-    width: 100%;
-    padding: 0px 15%;
+    width: calc(100% - 57px);
+    padding: 0px 10%;
     min-height: 700px;
     background-image: url("../images/bg-dark.png");
     background-repeat: no-repeat;
